--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
+    "next": "14.2.6",
     "react": "^18",
+    "react-data-grid": "^7.0.0-beta.46",
     "react-dom": "^18",
-    "next": "14.2.6"
+    "react-icons": "^5.3.0",
+    "react-resizable": "^3.0.5",
+    "react-spreadsheet": "^0.9.5",
+    "react-window": "^1.8.10",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "postcss": "^8",
